syntax = "proto3";

package auth;

service Auth {
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc UserInfo(UserInfoRequest) returns (UserInfoResponse) {}
    rpc Roles(RoleRequest) returns (RoleResponse) {}
}

message LoginRequest {
    string userName = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}


message RegisterRequest {
    string userName = 1;
    string email = 2;
    string password = 3;
    string verifyPassword = 4;
}

message RegisterResponse {
    string token = 1;
}


message UserInfoRequest {
    string token = 1;
}

message UserInfoResponse {
    string userName = 1;
}

message RoleRequest {
    string token = 1;
}

message RoleResponse {
    string roles = 1;
}
